Temporarily removing the gateway so we can move to a tunneling mechanism
